# Solution_of_Poissons_equation

./: CMakeLists.txt  README.md  base_func.hpp  main.cpp  matrix.hpp  poisson_distribution.hpp  surfacegraph.cpp
